# neuralmesh

./: .gitignore  Cargo.toml  LICENSE  README.md
agent/: Cargo.toml
agent/src/: checkpoint.rs  coordinator_client.rs  idle_monitor.rs  job_runner.rs  main.rs
cli/: Cargo.toml
cli/src/: client.rs  config.rs  main.rs
cli/src/commands/: account.rs  job.rs  mod.rs  provider.rs  wallet.rs
coordinator/: Cargo.toml
coordinator/.sqlx/: query-08a4759808f2a485532a61691716c5c787ed17e68eb79bfd7b624f63ab669b7b.json  query-0d1d73015439b483cba6f93420d6c7648cf02d3cb9337e61be1f48027a4d8fef.json  query-0ef433f8810f051b2f369ba9c4e4035d91cab1c09c257918acc7e0c546c77b17.json  query-1146d9a7330d8eaae7441f01a8eebbc4e344ed72f5b957c90f75ef11660fff9f.json  query-17ab77c173b145b362d575adeffed3f7af4f5343926421628e6d59300f507cbb.json  query-1a11f76280f9ff622ba8903c0764c5bf01099da39bddd297fc2ec0861587bf09.json  query-1aaf5cb4050ca78c4968e9ca1bc0e684c97e2b6dfe481691b3ebcfb7576c5277.json  query-1b7c17804632bb4af013ee85b14719dcae89db87e1553fe422d6e702d8cb2504.json  query-1bac843985e934f99c91079bfd3ada4a01deb42efe478a06a7bada3c6b6fea4a.json  query-1df623ac76fd636e6324a4257eec94e5447c6cbae9cf0dd0ce2e9282c49d37e6.json  query-1ebbc446dde0e22b0c7e4ec003cd8109a0e10900b2d56d5967fa0900faa84601.json  query-23640074cb4410093e5015949df396e8277e18f929d7a9312b4e8e7be5c91099.json  query-25a6f60ec1163f491738f11adbaf0efeecc9a6164acec4dadafa4b62e2cd7f0b.json  query-28fc8dc85e23ea2c92f12c5b4b0a2e97c18b52f561eaa5a080df5a7f71aa1921.json  query-2cc30a9513ee960b32e6b4f7b0a1d7e1a5675270a6cf435e8a567f9739ca7746.json  query-311713b2c618427885ba68ca822ee0759660dcd7d0d0a5a8a1e6682591b01e23.json  query-33c3f919b1000bff042a2151130257eac9a37476054c87dd844843a1a465cc61.json  query-3499e393b7060335a9eb99306046f7dee656574d9818f3aa990ce2dc5d4f550e.json  query-34b92ebc4938b4456dd7a4d4c608622615ed4963a40d7a32160f469680f49536.json  query-399b771800240b06de432556c16875063aa32596f0538389a2482ee18f68ab4a.json  query-3c186c67a3756c518076ffea6449a4c3c798d769977dd85093d337fe3b2183b1.json  query-3c54a324d8b39fd727a911f13860fa5caec556646bf6f3fa1dcc4f77c9bafa7a.json  query-3e9d0a4f056dfa502c6cbc69250d103b13d27cdf26dcb5a3d02941ae303af153.json  query-456fd05f40367e2832064063613e8a385db1d16763d2df8b49b2d6edae8cc3d6.json  query-46ee3d44e7a12b00bd3af0bd382b0cc1f0e0b57c2f9713d67a372c54d2c6e417.json  query-50fafcebbd35ce036f3ccf206283101475cc4d34838d10fba4de8c3449055aa8.json  query-512450aa4b37c3d0711843a94c962a8fe1106e8809cb41be752d7ca3bb8def86.json  query-52301befeec4e757fdf17b6290019ae50fb8be4ae39a72f75d30f4c470f0d4d3.json  query-537fe441ddf7edd74db529ea5b75c8cc4a03f4fa9f9ec03db88eb1e0b14b5b84.json  query-5977ff2f882468f588cf85c91ea660747bd37256cfcd4f34174481631038bdce.json  query-5a565e64a97cd8d0bb27fd27f2b4ff410cdfdc002b88401cc9588860a8886e64.json  query-650761436afa1f4cfc5019ce0bda359e74582903ffd947abfc5aed45202fdf65.json  query-658f46ec22d229d62c472b71152a4b4c666da0575f0fde36d42f9db11f0b3d69.json  query-72a2d85529fb1d8cc623567802fd6813768cfedc87d198431aeae012d0ac4da3.json  query-772aa9b45a9d082c27a3f7388c53bc61c719df82997392f8cfd59fe0bf9ed36e.json  query-77ee284a3f5bd21ee87a280a629858daef4b9569406da9b0f17477797a9060da.json  query-78c7d195a63f298fa1fac51fa1f7d0fb1a8bbc8f28fc2c33fe134db388a4d2fe.json  query-7b7e8eeb599cc0c54b616090fab9b125256cfcbfc4a3117e7aa876571527eb40.json  query-7e26cddbe61113cc5e1931efb04af9018f52eb256cf3a9ee4a308f4abb6d9566.json  query-7f4cb67c89f510a469c8afffe78d572e06882a8f12669c0a02f8cf9992812652.json  (+28 more)
coordinator/src/: main.rs
coordinator/src/api/: grpc.rs  mod.rs  rest.rs
coordinator/src/db/migrations/: 004_checkpoints.sql  005_gpu_hours.sql  006_job_logs.sql  007_script_name.sql  008_tx_balance_after.sql  009_artifacts_table.sql
coordinator/src/matching/: mod.rs
crates/nm-common/src/: config.rs
crates/nm-macos/: Cargo.toml
crates/nm-macos/src/: idle.rs  lib.rs  virt.rs
dashboard/: Dockerfile  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/account/: page.tsx
dashboard/src/app/api/stripe/checkout/: route.ts
dashboard/src/app/api/stripe/webhook/: route.ts
dashboard/src/app/compliance/: page.tsx
dashboard/src/app/jobs/: page.tsx
dashboard/src/app/jobs/[id]/: page.tsx
dashboard/src/app/market/: page.tsx
dashboard/src/app/provider/: page.tsx
dashboard/src/app/wallet/: page.tsx
dashboard/src/components/: Navbar.tsx
dashboard/src/lib/: api-client.ts  device-id.ts  stripe.ts  utils.ts  web3.ts
docs/: index.html
infrastructure/: Dockerfile.coordinator  Dockerfile.ledger
ledger/.sqlx/: query-32552309e35afe9e583c2693a44fbfd03ef3783038d433f35149184962926f43.json  query-4ff7d02b39c0d09a557b43fb40f125c7ca1e4d44d036813d36ad2d81f98763d9.json  query-5f67d1de6d60b45528434bdc8e3fbcf25a5d824da7d8f244e3fb5685c7dd62eb.json  query-6c221848ab70dbb9cded74fdc5774521a6f637481a73a90642460ec13048e526.json  query-806437da31dc84862459cfaac0913bd4ce9607675e55bafacc264cb3c6968ca2.json  query-83d8e1a1cc997d85be9f15b07b3785d04fe118bf06c8dc00629af99bd6db472c.json  query-952428868a3e61d4c5390ef454f073bab29610c0ee409015f58bdce9f457dee7.json  query-a9cc14603861fa6a0fa6f93aeeb13e682a5e6ced08e857cce3985ae8b90f362f.json  query-b059cc46032406b9395646550c9200116776cc83933d26e784b9997cbd2d87b4.json  query-b3088a42b7ba443d17e7f7566afa70c3df7c234e6998bf83dc40910767c68108.json  query-b7a60460ab9584d151423aa76e7205309d79e84f90f552764b44af8c2ac59bd3.json  query-bcc3be7fcce4caecb95aff976b6b1213d013eb661ca308fbb269e5a859b69c3b.json  query-cb0009efd7b7117a567b49661a1ed77d0e1fb2ad50eb8cdc528b3c35c174ce33.json
ledger/src/: main.rs
ledger/src/off_chain/: handlers.rs
scripts/: install-agent-macos.sh
tools/nm-vm-helper/: build.sh  entitlements.plist  main.swift
