[package]
name = "neuralmesh-agent"
version.workspace = true
edition.workspace = true
default-run = "neuralmesh-agent"

[[bin]]
name = "neuralmesh-agent"
path = "src/main.rs"

[dependencies]
nm-common    = { workspace = true }
nm-proto     = { workspace = true }
nm-crypto    = { workspace = true }
nm-wireguard = { workspace = true }
nm-macos     = { workspace = true }

tokio        = { workspace = true }
tonic        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
toml         = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
uuid         = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
clap         = { workspace = true }
dirs         = { workspace = true }
tokio-stream = { workspace = true }
blake3       = { workspace = true }
sqlx         = { workspace = true }
prost-types  = { workspace = true }
reqwest      = { workspace = true }
