[package]
name = "neuralmesh-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hatch"
path = "src/main.rs"

[dependencies]
nm-common    = { workspace = true }
nm-proto     = { workspace = true }
nm-crypto    = { workspace = true }

tokio        = { workspace = true }
tonic        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
clap         = { workspace = true }
indicatif    = { workspace = true }
console      = { workspace = true }
colored      = { workspace = true }
dialoguer    = { workspace = true }
uuid         = { workspace = true }
dirs         = { workspace = true }
reqwest      = { version = "0.12", features = ["json", "stream", "multipart"] }
tokio-stream = { workspace = true }
toml         = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
hostname     = "0.4"
