[package]
name = "neuralmesh-coordinator"
version.workspace = true
edition.workspace = true

[[bin]]
name = "neuralmesh-coordinator"
path = "src/main.rs"

[dependencies]
nm-common = { workspace = true }
nm-proto  = { workspace = true }
nm-crypto = { workspace = true }

tokio        = { workspace = true }
tonic        = { workspace = true }
axum         = { workspace = true }
tower        = { workspace = true }
tower-http   = { workspace = true }
libp2p       = { workspace = true }
async-nats   = { workspace = true }
sqlx         = { workspace = true }
redis        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
toml         = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
uuid         = { workspace = true }
time         = { workspace = true }
rand         = { workspace = true }
clap         = { workspace = true }
tokio-stream = { workspace = true }
futures      = "0.3"
sha2         = { workspace = true }
hex          = { workspace = true }
reqwest      = { workspace = true }
tempfile     = "3"
